added retries for mets files