@@ -1,9 +1,7 @@
 package de.intranda.goobi.plugins;
 
-
 import java.io.FileInputStream;
 import java.io.IOException;
-import java.io.InputStream;
 import java.io.StringWriter;
 import java.net.URL;
 import java.nio.file.Files;
@@ -26,10 +24,10 @@ import javax.xml.transform.stream.StreamSource;
 import org.apache.commons.codec.digest.DigestUtils;
 import org.apache.commons.configuration.SubnodeConfiguration;
 import org.goobi.beans.GoobiProperty;
+import org.goobi.beans.GoobiProperty.PropertyOwnerType;
 import org.goobi.beans.JournalEntry;
 import org.goobi.beans.JournalEntry.EntryType;
 import org.goobi.beans.Step;
-import org.goobi.beans.GoobiProperty.PropertyOwnerType;
 import org.goobi.production.enums.LogType;
 import org.goobi.production.enums.PluginGuiType;
 import org.goobi.production.enums.PluginReturnValue;
@@ -53,8 +51,6 @@ import de.intranda.goobi.plugins.model.MycoreFile;
 import de.sub.goobi.config.ConfigPlugins;
 import de.sub.goobi.config.ConfigurationHelper;
 import de.sub.goobi.export.download.ExportMets;
-import de.sub.goobi.helper.BeanHelper;
-import de.sub.goobi.helper.Helper;
 import de.sub.goobi.helper.StorageProvider;
 import de.sub.goobi.helper.enums.PropertyType;
 import de.sub.goobi.helper.exceptions.DAOException;
@@ -90,10 +86,14 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	private String mycoreLogin;
 	private String mycorePassword;
 	private IngestReceipt receipt;
+	private List<IngestFile> metses;
 	private List<IngestFile> medias;
 	private List<IngestFile> altos;
+	private int ingestMaxTries = 3;
+	private int ingestCurrentTry = 1;
 	private boolean ingestOk = false;
-	
+	private String ingestMessage = "";
+
 	@Override
 	public void initialize(Step step, String returnPath) {
 		this.returnPath = returnPath;
@@ -105,6 +105,7 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		mycoreApi = myconfig.getString("mycore-api", "https://mycore.io/123");
 		mycoreLogin = myconfig.getString("mycore-login", "login");
 		mycorePassword = myconfig.getString("mycore-password", "password");
+		ingestMaxTries = myconfig.getInt("max-tries", 3);
 		log.info("MycoreIngest step plugin initialized");
 	}
 
@@ -151,11 +152,13 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 
 	@Override
 	public PluginReturnValue run() {
+		ingestCurrentTry = 0;
+		metses = new ArrayList<>();
 		medias = new ArrayList<>();
 		altos = new ArrayList<>();
 		receipt = new IngestReceipt();
 		receipt.setStatus("STARTED");
-		
+
 		// export the mets file
 		Path metsfile;
 		try {
@@ -176,7 +179,7 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 			writeErrorToJournal("Error while doing the XSLT processing for the METS file: " + e.getMessage());
 			return PluginReturnValue.ERROR;
 		}
-		
+
 		// create volume in mycore
 		String volumeLocation = null;
 		try {
@@ -188,7 +191,7 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 			writeErrorToJournal("Error while creating the volume: " + e.getMessage());
 			return PluginReturnValue.ERROR;
 		}
-		
+
 		// create derivative in mycore
 		String derivativeLocation = null;
 		try {
@@ -200,29 +203,58 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 			writeErrorToJournal("Error while creating the derivative: " + e.getMessage());
 			return PluginReturnValue.ERROR;
 		}
-		
+
 		try {
+			
 			// upload regular METS file
-//			uploadFileToDerivative(derivativeLocation, metsfile, "application/xml", "", "goobi_mets.xml");
+			IngestFile fmets = new IngestFile();
+			fmets.setGoobiFilePath(metsfile.toString());
+			fmets.setName("goobi_mets.xml");
+			fmets.setGoobiFileType("mets");
+			fmets.setGoobiSize(Files.size(metsfile));
+			fmets.setGoobiChecksum(md5Hex(metsfile));
+			metses.add(fmets);
 			
 			// upload METS anchor file
-			String anchor = metsfile.toString().replace("_mets.xml", "_mets_anchor.xml");
-//			uploadFileToDerivative(derivativeLocation, Paths.get(anchor), "application/xml", "", "goobi_mets_anchor.xml");
+			Path anchor = Paths.get(metsfile.toString().replace("_mets.xml", "_mets_anchor.xml"));
+			IngestFile fmetsanchor = new IngestFile();
+			fmetsanchor.setGoobiFilePath(anchor.toString());
+			fmetsanchor.setName("goobi_mets_anchor.xml");
+			fmetsanchor.setGoobiFileType("mets");
+			fmetsanchor.setGoobiSize(Files.size(anchor));
+			fmetsanchor.setGoobiChecksum(md5Hex(anchor));
+			metses.add(fmetsanchor);
+			
+			// try several times to ingest the files
+			while (!ingestOk && ingestCurrentTry < ingestMaxTries) {
+				ingestCurrentTry++;
+				
+				// if not uploaded successfully before try it two more times max 
+				if (!fmets.isValid() && fmets.getUploadCounter()<ingestMaxTries) {
+					fmets.setUploadCounter(fmets.getUploadCounter() + 1);
+					uploadFile(derivativeLocation + "/contents/", metsfile, "application/xml", "goobi_mets.xml");
+				}
+				if (!fmetsanchor.isValid() && fmetsanchor.getUploadCounter()<ingestMaxTries) {
+					fmetsanchor.setUploadCounter(fmetsanchor.getUploadCounter() + 1);
+					uploadFile(derivativeLocation + "/contents/", anchor, "application/xml", "goobi_mets_anchor.xml");
+				}				
+				
+				// upload image derivatives and ALTO files
+				uploadFolder(step.getProzess().getImagesTifDirectory(false), "media", medias,
+						derivativeLocation + "/contents/", "image/tif");
+				uploadFolder(step.getProzess().getOcrAltoDirectory(), "alto", altos,
+						derivativeLocation + "/contents/ocr/alto/", "application/xml");
 
-			// upload image derivatives and ALTO files
-//			uploadImageFilesToDerivative(derivativeLocation);
-//			uploadAltoFilesToDerivative(derivativeLocation);
-			
-			uploadFolder(step.getProzess().getImagesTifDirectory(false), "media", medias, derivativeLocation + "/contents/", "image/tif");
-			uploadFolder(step.getProzess().getOcrAltoDirectory(), "alto", altos, derivativeLocation + "/contents/ocr/alto/", "application/xml");
-			
-			// reqest content information for images and mets file
-			requestIngestedContentInformation(derivativeLocation, "/contents/", medias);
-			requestIngestedContentInformation(derivativeLocation, "/contents/ocr/alto/", altos);
-			
-			//validateFiles(derivativeLocation, "/contents/", derivatives, "/contents/ocr/alto/", altos);
+				// request content information for images and mets file
+				requestIngestedContentInformation(derivativeLocation, "/contents/", metses);
+				requestIngestedContentInformation(derivativeLocation, "/contents/", medias);
+				requestIngestedContentInformation(derivativeLocation, "/contents/ocr/alto/", altos);
+
+				validateFiles(derivativeLocation, "/contents/", "/contents/ocr/alto/");
+			}
 			
 			// add files into receipt
+			receipt.getFiles().addAll(metses);
 			receipt.getFiles().addAll(medias);
 			receipt.getFiles().addAll(altos);
 			log.info("Images were uploaded to MyCoRe derivative");
@@ -231,32 +263,37 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 			writeErrorToJournal("Error while uploading images to the derivative: " + e.getMessage());
 			return PluginReturnValue.ERROR;
 		}
-		
-		
+
 		// write summary information into properties
 		try {
-			writeProperty("Ingest Status",String.valueOf(ingestOk));
-			writeProperty("Ingest Details",receipt.getDetails());
+			writeProperty("Ingest Status", String.valueOf(ingestOk));
+			writeProperty("Ingest Details", ingestMessage);
 			writeProperty("Ingest Timestamp", LocalDateTime.now().toString());
-			writeProperty("Derivat URL",derivativeLocation);
+			writeProperty("Derivat URL", derivativeLocation);
 			writeSummaryProperties();
 			log.info("Properties with ingest results into MyCoRe were created");
 		} catch (IOException | SwapException | DAOException e) {
 			log.error("Error while writing summary information of MyCoRe ingest as properties", e);
-			writeErrorToJournal("Error while writing summary information of MyCoRe ingest as properties: " + e.getMessage());
+			writeErrorToJournal(
+					"Error while writing summary information of MyCoRe ingest as properties: " + e.getMessage());
 			return PluginReturnValue.ERROR;
 		}
-		
-		log.info("MycoreIngest step plugin executed");
-		writeReceipt(ingestOk, "Ingest finished successfull");
-		return PluginReturnValue.FINISH;
+
+		writeReceipt(ingestOk, ingestMessage);
+		log.info("MycoreIngest step plugin executed");		
+		if (ingestOk) {
+			return PluginReturnValue.FINISH;			
+		} else {
+			return PluginReturnValue.ERROR;						
+		}
 	}
 
 	/**
 	 * write summary information into the properties of the process
-	 * @throws DAOException 
-	 * @throws SwapException 
-	 * @throws IOException 
+	 * 
+	 * @throws DAOException
+	 * @throws SwapException
+	 * @throws IOException
 	 */
 	private void writeSummaryProperties() throws IOException, SwapException, DAOException {
 
@@ -265,16 +302,16 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		String masterfolder = step.getProzess().getImagesOrigDirectory(false);
 		List<Path> list = StorageProvider.getInstance().listFiles(masterfolder);
 		for (Path p : list) {
-			sizeMaster+=Files.size(p);
+			sizeMaster += Files.size(p);
 		}
 		writeProperty("Speicherplatz Master Goobi", String.valueOf(sizeMaster));
-		
+
 		// File sizes media in Goobi and MyCoRe
 		long sizeMediaGoobi = 0;
 		long sizeMediaMyCoRe = 0;
 		for (IngestFile i : medias) {
-			sizeMediaGoobi+=i.getGoobiSize();
-			sizeMediaMyCoRe+=i.getMycoreSize();
+			sizeMediaGoobi += i.getGoobiSize();
+			sizeMediaMyCoRe += i.getMycoreSize();
 		}
 		writeProperty("Speicherplatz Derivate Goobi", String.valueOf(sizeMediaGoobi));
 		writeProperty("Speicherplatz Derivate MyCoRe", String.valueOf(sizeMediaMyCoRe));
@@ -283,12 +320,12 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		long sizeAltoGoobi = 0;
 		long sizeAltoMyCoRe = 0;
 		for (IngestFile i : altos) {
-			sizeAltoGoobi+=i.getGoobiSize();
-			sizeAltoMyCoRe+=i.getMycoreSize();
+			sizeAltoGoobi += i.getGoobiSize();
+			sizeAltoMyCoRe += i.getMycoreSize();
 		}
 		writeProperty("Speicherplatz ALTO Goobi", String.valueOf(sizeAltoGoobi));
 		writeProperty("Speicherplatz ALTO MyCoRe", String.valueOf(sizeAltoMyCoRe));
-		
+
 	}
 
 	/**
@@ -304,8 +341,8 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		prop.setType(PropertyType.getByName("String"));
 		prop.setPropertyValue(value);
 		prop.setContainer("MyCoRe");
-        step.getProzess().getEigenschaften().add(prop);
-        PropertyManager.saveProperty(prop);
+		step.getProzess().getEigenschaften().add(prop);
+		PropertyManager.saveProperty(prop);
 	}
 
 	/**
@@ -315,36 +352,34 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	 * @param details
 	 */
 	private void writeReceipt(boolean status, String details) {
-		receipt.setStatus(status?"FINISHED":"ERROR");
+		receipt.setStatus(status ? "FINISHED" : "ERROR");
 		receipt.setDetails(details);
 		receipt.setEnd(LocalDateTime.now());
-		
+
 		// write object as xml file
-   		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd-HHmmssSSS");
+		DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd-HHmmssSSS");
 		JavaTimeModule jsr310 = new JavaTimeModule();
 		jsr310.addSerializer(LocalDateTime.class, new LocalDateTimeSerializer(formatter));
 		jsr310.addDeserializer(LocalDateTime.class, new LocalDateTimeDeserializer(formatter));
-		ObjectMapper om = new XmlMapper()
-				.registerModule(jsr310)
+		ObjectMapper om = new XmlMapper().registerModule(jsr310)
 				.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
 		om.setSerializationInclusion(Include.NON_EMPTY);
-        om.enable(SerializationFeature.INDENT_OUTPUT);
+		om.enable(SerializationFeature.INDENT_OUTPUT);
 
-        
-        try {
-	        Path folder = Paths.get(step.getProzess().getProcessDataDirectory(),
-	                    ConfigurationHelper.getInstance().getFolderForInternalJournalFiles());
-	        if (!StorageProvider.getInstance().isFileExists(folder)) {
-	            StorageProvider.getInstance().createDirectories(folder);
-	        }
-	        String filename = "ingest-receipt-" + receipt.getEnd().format(formatter) + ".xml";
-	        Path file = Path.of(folder.toString(), filename);
-	        om.writeValue(file.toFile(), receipt);
-        
-            JournalEntry entry = new JournalEntry(step.getProzess().getId(), new Date(), "- automatic -",
-                    LogType.FILE, "Receipt for the ingest into MyCoRe created", EntryType.PROCESS);
-            entry.setFilename(file.toString());
-            JournalManager.saveJournalEntry(entry);
+		try {
+			Path folder = Paths.get(step.getProzess().getProcessDataDirectory(),
+					ConfigurationHelper.getInstance().getFolderForInternalJournalFiles());
+			if (!StorageProvider.getInstance().isFileExists(folder)) {
+				StorageProvider.getInstance().createDirectories(folder);
+			}
+			String filename = "ingest-receipt-" + receipt.getEnd().format(formatter) + ".xml";
+			Path file = Path.of(folder.toString(), filename);
+			om.writeValue(file.toFile(), receipt);
+
+			JournalEntry entry = new JournalEntry(step.getProzess().getId(), new Date(), "- automatic -", LogType.FILE,
+					"Receipt for the ingest into MyCoRe created", EntryType.PROCESS);
+			entry.setFilename(file.toString());
+			JournalManager.saveJournalEntry(entry);
 
 		} catch (IOException | SwapException e) {
 			log.error("Error writing the receipt to the filesystem", e);
@@ -354,15 +389,16 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 
 	/**
 	 * simple helper to write error message into journal
+	 * 
 	 * @param message
 	 */
 	private void writeErrorToJournal(String message) {
-		JournalEntry entry = new JournalEntry(step.getProzess().getId(), new Date(), "- automatic -",
-                LogType.ERROR, message, EntryType.PROCESS);
-        JournalManager.saveJournalEntry(entry);
-        writeReceipt(false, message);
+		JournalEntry entry = new JournalEntry(step.getProzess().getId(), new Date(), "- automatic -", LogType.ERROR,
+				message, EntryType.PROCESS);
+		JournalManager.saveJournalEntry(entry);
+		writeReceipt(false, message);
 	}
-	
+
 	/**
 	 * do a regular export of a METS file into temp folder
 	 * 
@@ -381,11 +417,10 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	 * @throws SwapException
 	 * @throws DAOException
 	 */
-	private Path exportMetsFile()
-			throws PreferencesException, WriteException, DocStructHasNoTypeException, MetadataTypeNotAllowedException,
-			ReadException, TypeNotAllowedForParentException, IOException, InterruptedException, ExportFileException,
-			UghHelperException, SwapException, DAOException {
-		
+	private Path exportMetsFile() throws PreferencesException, WriteException, DocStructHasNoTypeException,
+			MetadataTypeNotAllowedException, ReadException, TypeNotAllowedForParentException, IOException,
+			InterruptedException, ExportFileException, UghHelperException, SwapException, DAOException {
+
 		ExportMets export = new ExportMets();
 		boolean success = export.startExport(step.getProzess(), ConfigurationHelper.getInstance().getTemporaryFolder());
 		Path metsfile = Paths.get(ConfigurationHelper.getInstance().getTemporaryFolder(),
@@ -395,75 +430,74 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		}
 		return metsfile;
 	}
-	
-	
+
 	/**
 	 * do the xsl transformation of the mets file
+	 * 
 	 * @param metsfile
-	 * @throws IOException 
-	 * @throws TransformerException 
+	 * @throws IOException
+	 * @throws TransformerException
 	 */
-	private String xslTranform(Path metsfile) throws IOException, TransformerException {  
-            	
-    	// first get the mycore id from a property
+	private String xslTranform(Path metsfile) throws IOException, TransformerException {
+
+		// first get the mycore id from a property
 		String mycoreId = null;
-    	for (GoobiProperty gp : step.getProzess().getEigenschaftenList()) {
-            if (gp.getPropertyName().equalsIgnoreCase("MyCore-ID")) {
-            	mycoreId = gp.getPropertyValue();
-                break;
-            }
-    	}
-    	
-    	// if property exists to transformation
-    	if (mycoreId!=null) {
-    		
-        	Source xmlSource = new StreamSource(metsfile.toFile());  
-            URL xsltUrl = new URL(xslt);  
-            Source xsltSource = new StreamSource(xsltUrl.openStream());  
-  
-            TransformerFactory factory = TransformerFactory.newInstance();  
-            Transformer transformer = factory.newTransformer(xsltSource);  
-            transformer.setParameter("parentID", mycoreId);  
-          
-            StringWriter writer = new StringWriter();
-            StreamResult result = new StreamResult(writer);
-            transformer.transform(xmlSource, result);
-            String xmlString = writer.toString();
-            return xmlString;
-            
-    	} else {
-    		throw new IOException("No MyCoRe identifier could be found as property with name 'MyCore-ID'");
-    	}
+		for (GoobiProperty gp : step.getProzess().getEigenschaftenList()) {
+			if (gp.getPropertyName().equalsIgnoreCase("MyCore-ID")) {
+				mycoreId = gp.getPropertyValue();
+				break;
+			}
+		}
+
+		// if property exists to transformation
+		if (mycoreId != null) {
+
+			Source xmlSource = new StreamSource(metsfile.toFile());
+			URL xsltUrl = new URL(xslt);
+			Source xsltSource = new StreamSource(xsltUrl.openStream());
+
+			TransformerFactory factory = TransformerFactory.newInstance();
+			Transformer transformer = factory.newTransformer(xsltSource);
+			transformer.setParameter("parentID", mycoreId);
+
+			StringWriter writer = new StringWriter();
+			StreamResult result = new StreamResult(writer);
+			transformer.transform(xmlSource, result);
+			String xmlString = writer.toString();
+			return xmlString;
+
+		} else {
+			throw new IOException("No MyCoRe identifier could be found as property with name 'MyCore-ID'");
+		}
 	}
-	
+
 	/**
 	 * create a volume inside of MyCoRe
+	 * 
 	 * @param sourceXml
 	 * @return
 	 * @throws IOException
 	 */
 	private String createVolume(String sourceXml) throws IOException {
-		HttpResponse<String> response = Unirest.post(mycoreApi + "objects")
-		  .header("Content-Type", "application/xml")
-		  .header("Accept", "application/xml")
-		  .basicAuth(mycoreLogin, mycorePassword)
-		  .body(sourceXml)
-		  .asString();
+		HttpResponse<String> response = Unirest.post(mycoreApi + "objects").header("Content-Type", "application/xml")
+				.header("Accept", "application/xml").basicAuth(mycoreLogin, mycorePassword).body(sourceXml).asString();
 
 		if (response.isSuccess()) {
-		    String location = response.getHeaders().getFirst("location");
-		    if (location != null) {
-		    	return location;
-		    } else {
-		    	throw new IOException("No location could be found for created volume in MyCoRe.");
-		    }
+			String location = response.getHeaders().getFirst("location");
+			if (location != null) {
+				return location;
+			} else {
+				throw new IOException("No location could be found for created volume in MyCoRe.");
+			}
 		} else {
-			throw new IOException("Response of MyCoRe for creation of volume was not successful: " + response.getStatus() + " - " + response.getBody());
+			throw new IOException("Response of MyCoRe for creation of volume was not successful: "
+					+ response.getStatus() + " - " + response.getBody());
 		}
 	}
-	
+
 	/**
 	 * create derivative for a volume inside of MyCoRe
+	 * 
 	 * @param inLocation
 	 * @param sourceXml
 	 * @return
@@ -471,26 +505,22 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	 */
 	private String createDerivativeForVolume(String inLocation, String sourceXml) throws IOException {
 		HttpResponse<String> response = Unirest.post(inLocation + "/derivates")
-		  .header("Content-Type", "application/xml")
-		  .header("Accept", "application/xml")
-		  .basicAuth(mycoreLogin, mycorePassword)
-		  .body(sourceXml)
-		  .asString();
+				.header("Content-Type", "application/xml").header("Accept", "application/xml")
+				.basicAuth(mycoreLogin, mycorePassword).body(sourceXml).asString();
 
 		if (response.isSuccess()) {
-		    String location = response.getHeaders().getFirst("location");
-		    if (location != null) {
-		    	return location;
-		    } else {
-		    	throw new IOException("No location could be found for created derivative in MyCoRe.");
-		    }
+			String location = response.getHeaders().getFirst("location");
+			if (location != null) {
+				return location;
+			} else {
+				throw new IOException("No location could be found for created derivative in MyCoRe.");
+			}
 		} else {
-			throw new IOException("Response of MyCoRe for creation of derivative was not successful: " + response.getStatus() + " - " + response.getBody());
+			throw new IOException("Response of MyCoRe for creation of derivative was not successful: "
+					+ response.getStatus() + " - " + response.getBody());
 		}
 	}
-	
 
-	
 	/**
 	 * upload all files of a folder to derivative in MyCoRe
 	 * 
@@ -502,21 +532,36 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	 * @throws IOException
 	 * @throws SwapException
 	 */
-	private void uploadFolder(String folder, String type, List<IngestFile> list, String location, String mimetype) throws IOException, SwapException {
+	private void uploadFolder(String folder, String type, List<IngestFile> list, String location, String mimetype)
+			throws IOException, SwapException {
 		List<Path> filelist = StorageProvider.getInstance().listFiles(folder);
 		for (Path p : filelist) {
-			IngestFile f = new IngestFile();
-			f.setGoobiFilePath(p.toString());
-			f.setName(p.getFileName().toString());
-			f.setGoobiFileType(type);
-			f.setGoobiSize(Files.size(p));
-			f.setGoobiChecksum(md5Hex(p));
-			f.setUploadCounter(f.getUploadCounter()+1);
-			list.add(f);
-			uploadFile(location, p, mimetype, p.getFileName().toString());
+			IngestFile f = null;
+			for (IngestFile inf : list) {
+				// if file is known, reupload it
+				if (inf.getGoobiFilePath().equals(p.toString())) {
+					f = inf;
+					break;
+				}
+			}
+			// if file is unknown, create and add it
+			if (f==null) {
+				f = new IngestFile();
+				f.setGoobiFilePath(p.toString());
+				f.setName(p.getFileName().toString());
+				f.setGoobiFileType(type);
+				f.setGoobiSize(Files.size(p));
+				f.setGoobiChecksum(md5Hex(p));
+				list.add(f);
+			}
+			
+			// if not uploaded successfully before try it two more times max 
+			if (!f.isValid() && f.getUploadCounter()<3) {
+				f.setUploadCounter(f.getUploadCounter() + 1);
+				uploadFile(location, p, mimetype, p.getFileName().toString());
+			}
 		}
 	}
-	
 
 	/**
 	 * upload a file to derivative in MyCoRe
@@ -532,133 +577,45 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 		int count = 0;
 		boolean success = false;
 		int status = 0;
-		
+
 		// try up to 3 times to upload a file
 		while (!success && count < 3) {
 			count++;
 			try {
-				HttpResponse<String> response = Unirest.put(location + filename)
-			        .header("Content-Type", mimetype)
-			        .basicAuth(mycoreLogin, mycorePassword)
-			        .body(Files.readAllBytes(p))
-			        .asString();
+				HttpResponse<String> response = Unirest.put(location + filename).header("Content-Type", mimetype)
+						.basicAuth(mycoreLogin, mycorePassword).body(Files.readAllBytes(p)).asString();
 				success = true;
 				status = response.getStatus();
 			} catch (IOException e) {
 				log.error("Error while uploading file (" + count + ")", e);
 			}
 		}
-		
+
 		if (status < 200 || status >= 300) {
-		    throw new IOException("Response of MyCoRe for creation of derivative was not successful: " 
-		        + status);
+			throw new IOException("Response of MyCoRe for creation of derivative was not successful: " + status);
 		}
 	}
-	
-//	/**
-//	 * upload images to derivative in MyCoRe
-//	 * 
-//	 * @param inLocation
-//	 * @throws IOException
-//	 * @throws SwapException
-//	 */
-//	private void uploadImageFilesToDerivative(String inLocation) throws IOException, SwapException {
-//		String folder = step.getProzess().getImagesTifDirectory(false);
-//		List<Path> list = StorageProvider.getInstance().listFiles(folder);
-//		for (Path p : list) {
-//			IngestFile f = new IngestFile();
-//			f.setGoobiFilePath(p.toString());
-//			f.setName(p.getFileName().toString());
-//			f.setGoobiFileType("media");
-//			f.setGoobiSize(Files.size(p));
-//			f.setGoobiChecksum(md5Hex(p));
-//			f.setUploadCounter(f.getUploadCounter()+1);
-//			medias.add(f);
-//			uploadFileToDerivative(inLocation, p, "image/tif", "", p.getFileName().toString());
-//		}
-//	}
-//	
-//	/**
-//	 * upload alto files to derivative in MyCoRe
-//	 * 
-//	 * @param inLocation
-//	 * @throws IOException
-//	 * @throws SwapException
-//	 */
-//	private void uploadAltoFilesToDerivative(String inLocation) throws IOException, SwapException {
-//		String folder = step.getProzess().getOcrAltoDirectory();
-//		List<Path> list = StorageProvider.getInstance().listFiles(folder);
-//		for (Path p : list) {
-//			IngestFile f = new IngestFile();
-//			f.setGoobiFilePath(p.toString());
-//			f.setName(p.getFileName().toString());
-//			f.setGoobiFileType("alto");
-//			f.setGoobiSize(Files.size(p));
-//			f.setGoobiChecksum(md5Hex(p));
-//			f.setUploadCounter(f.getUploadCounter()+1);
-//			altos.add(f);
-//			uploadFileToDerivative(inLocation, p, "application/xml", "ocr/alto/", p.getFileName().toString());
-//		}
-//	}
-	
-//	/**
-//	 * upload a file to derivative in MyCoRe
-//	 * 
-//	 * @param inLocation
-//	 * @param p
-//	 * @param mimetype
-//	 * @throws IOException
-//	 */
-//	private void uploadFileToDerivative(String inLocation, Path p, String mimetype, String subfolder, String filename) throws IOException {
-//		log.info("Upload file " + p.toString() + " to MyCoRe");
-//		int count = 0;
-//		boolean success = false;
-//		int status = 0;
-//		
-//		// try up to 3 times to upload a file
-//		while (!success && count < 3) {
-//			count++;
-//			try {
-//				HttpResponse<String> response = Unirest.put(inLocation + "/contents/" + subfolder + filename)
-//			        .header("Content-Type", mimetype)
-//			        .basicAuth(mycoreLogin, mycorePassword)
-//			        .body(Files.readAllBytes(p))
-//			        .asString();
-//				success = true;
-//				status = response.getStatus();
-//			} catch (IOException e) {
-//				log.error("Error while uploading file (" + count + ")", e);
-//			}
-//		}
-//		
-//		if (status < 200 || status >= 300) {
-//		    throw new IOException("Response of MyCoRe for creation of derivative was not successful: " 
-//		        + status);
-//		}
-//	}
-	
-	
+
 	/**
 	 * Validate content after the mycore ingest
 	 * 
 	 * @param inLocation
-	 * @throws SwapException 
-	 * @throws IOException 
+	 * @throws SwapException
+	 * @throws IOException
 	 */
-	private void requestIngestedContentInformation(String inLocation, String locationSuffix, List<IngestFile> list) throws IOException, SwapException {
+	private void requestIngestedContentInformation(String inLocation, String locationSuffix, List<IngestFile> list)
+			throws IOException, SwapException {
 		log.info("Request content of ingested content under " + inLocation + locationSuffix + " in MyCoRe");
-		HttpResponse<String> response = Unirest.get(inLocation + locationSuffix)
-				.header("Accept", "application/xml")
-				.basicAuth(mycoreLogin, mycorePassword)
-				.asString();
-		
+		HttpResponse<String> response = Unirest.get(inLocation + locationSuffix).header("Accept", "application/xml")
+				.basicAuth(mycoreLogin, mycorePassword).asString();
+
 		XmlMapper xml = new XmlMapper();
-        xml.registerModule(new JavaTimeModule());
-        xml.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
-        xml.enable(SerializationFeature.INDENT_OUTPUT);
-        xml.configure(ToXmlGenerator.Feature.WRITE_XML_DECLARATION, true);
-        MycoreDirectory dn = xml.readValue(response.getBody(), MycoreDirectory.class);
-		for (MycoreFile	mf : dn.getFiles()) {
+		xml.registerModule(new JavaTimeModule());
+		xml.disable(SerializationFeature.WRITE_DATES_AS_TIMESTAMPS);
+		xml.enable(SerializationFeature.INDENT_OUTPUT);
+		xml.configure(ToXmlGenerator.Feature.WRITE_XML_DECLARATION, true);
+		MycoreDirectory dn = xml.readValue(response.getBody(), MycoreDirectory.class);
+		for (MycoreFile mf : dn.getFiles()) {
 			for (IngestFile f : list) {
 				if (f.getName().equals(mf.getName())) {
 					f.setMycoreChecksum(mf.getMd5());
@@ -683,9 +640,10 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 			return DigestUtils.md5Hex(fis);
 		}
 	}
-	
+
 	/**
 	 * validate uploaded content and reupload if needed
+	 * 
 	 * @param derivativeLocation
 	 * @param suffixImages
 	 * @param listImages
@@ -693,20 +651,26 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 	 * @param listAlto
 	 * @throws IOException
 	 */
-	private void validateFiles(String derivativeLocation, String suffixImages, List<IngestFile> listImages, String suffixAlto, List<IngestFile> listAlto) throws IOException {
+	private void validateFiles(String location, String pathimages, String pathalto) throws IOException {
+		List<IngestFile> allLists = new ArrayList<>();
+		allLists.addAll(metses);
+		allLists.addAll(medias);
+		allLists.addAll(altos);
 		
-		// run through all image image file (different checksum and max 3 tries
-		for (IngestFile f : listImages) {
-			if (!f.getMycoreChecksum().equals(f.getGoobiChecksum()) && f.getUploadCounter()<3) {
-				Path p = Paths.get(f.getGoobiFilePath());
-				//uploadFileToDerivative(derivativeLocation, p, "image/tif", "", p.getFileName().toString());
+		// check all image checksums
+		for (IngestFile f : allLists) {
+			if (!f.getMycoreChecksum().equals(f.getGoobiChecksum())) {
+				ingestOk = false;
+				ingestMessage = "Checksums do not match";
+				return;
 			}
 		}
 		
-		
+		ingestOk = true;
+		ingestMessage = "Ingest successfull";
+
 	}
 
-	
 //	public static void main(String[] args) {
 //		HttpResponse<String> response = Unirest.get("https://zs-test.thulb.uni-jena.de/api/v2/objects/jportal_jpvolume_00003142/derivates/jportal_derivate_00002172/contents/")
 //		  .header("Authorization", "Basic Z29vYmk6dGVzdDEyMy4=")
@@ -734,6 +698,5 @@ public class MycoreIngestStepPlugin implements IStepPluginVersion2 {
 //		}
 //        
 //	}
-	
-	
+
 }
